Fixed navigation & layout issue

--- a/styles/avatar.css
+++ b/styles/avatar.css
@@ -1,21 +1,3 @@
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-}
-
-:root {
-  font-size: 62.5%;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
-}
-
 .avatar {
   width: 10rem;
   height: 10rem;
